--- a/Detectron_2_UpperTeethSegmentation.ipynb
+++ b/Detectron_2_UpperTeethSegmentation.ipynb
@@ -267,7 +267,7 @@
         "\n",
         "\n",
         "from roboflow import Roboflow\n",
-        "rf = Roboflow(api_key=\"9YBZ7oDbpgp9Sx7AXAEQ\")\n",
+        "rf = Roboflow(api_key=\"API Key\")\n",
         "project = rf.workspace(\"your workspace name\").project(\"project name\")\n",
         "version = project.version(2)\n",
         "dataset = version.download(\"coco-segmentation\")\n"
